tests/parsing/smtlib/v2.6/errors/038_match_bad_term_1.expected
File "tests/parsing/smtlib/v2.6/errors/038_match_bad_term_1.smt2", line 3, character 31-32:
3 | (define-fun f ((x t)) t (match _ ()))
                                   ^
Error while parsing a match, read the reserved word '_',
      but expected a term to match (i.e. the scrutinee of the match).
